--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,11 +2,10 @@
 {% block content %}
     {% for post in posts %}
         <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
+            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" >
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-{#                {% url 'user-posts' post.author.username %}#}
               <small class="text-muted">{{ post.date_posted|date:"d F, Y" }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
