--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,12 +1,12 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts By {{ views.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <h1 class="mb-3">Posts By {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" >{{ post.author }}</a>
+              <a class="mr-2"  >{{ post.author }}</a>
 {#              href="{% url 'user-posts' post.author.username %}"  #}
               <small class="text-muted">{{ post.date_posted|date:"d F, Y" }}</small>
             </div>
