--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,7 +20,7 @@
   <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Blog App by Django</a>
+          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Tweeter like Django App</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
